# config-stack-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/config_stack/: __init__.py  composer.py  env.py  errors.py  loader.py  merge.py  paths.py  snapshot.py
tests/: test_compose.py  test_loader_snapshot.py  test_merge.py
